objects/Contact/fields/Annual_Productive_Level__c.field-meta.xml
<CustomField>
    <fullName>Annual_Productive_Level__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
                <default>true</default>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>