objects/Contact/fields/Asia_Macro_Monthly_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Asia_Macro_Monthly_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Asia Macro Monthly - Monthly</label>
    <type>Checkbox</type>
</CustomField>