objects/Contact/fields/Asset_Allocation_View_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Asset_Allocation_View_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Asset Allocation View - Quarterly</label>
    <type>Checkbox</type>
</CustomField>