objects/Contact/fields/Authorized_Document__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Authorized Document</description>
    <inlineHelpText>WAMCRM : Authorized Document</inlineHelpText>
    <label>Other Legal Document</label>
    <type>Checkbox</type>
</CustomField>