objects/Contact/fields/Birthday_MM_DD__c.field-meta.xml
<CustomField>
    <fullName>Birthday_MM_DD__c</fullName>
    <description>Support WAM Birthday field</description>
    <inlineHelpText>Enter birthday in (MM/DD/YYYY). 
E.g. 12/23/1988
Year is optional. 
E.g. 12/23</inlineHelpText>
    <label>Birthdate (MM/DD)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>