objects/Contact/fields/Chart_of_the_Month_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_the_Month_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Chart of the Month - Monthly</label>
    <type>Checkbox</type>
</CustomField>