objects/Contact/fields/Chart_Pack_PowerPoint_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Chart_Pack_PowerPoint_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Chart Pack PowerPoint - Quarterly</label>
    <type>Checkbox</type>
</CustomField>