objects/Contact/fields/Contact_Rank__c.field-meta.xml
<CustomField>
    <fullName>Contact_Rank__c</fullName>
    <label>Contact Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <isActive>false</isActive>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>false</isActive>
                <label>Silver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>