objects/Contact/fields/Corporate_Action__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Corporate Action</description>
    <inlineHelpText>WAMCRM : Corporate Action</inlineHelpText>
    <label>Corporate Action</label>
    <type>Checkbox</type>
</CustomField>