objects/Contact/fields/Corporate_related_Notices__c.field-meta.xml
<CustomField>
    <fullName>Corporate_related_Notices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Corporate-related Notices</description>
    <label>Corporate-related Notices</label>
    <type>Checkbox</type>
</CustomField>