objects/Contact/fields/Daily_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Daily_Commentary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM :L Opt out field for &#39;Daily Commentary&#39;</description>
    <label>Daily Commentary</label>
    <type>Checkbox</type>
</CustomField>