objects/Contact/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM: Audit purpose to retain data, System admin to set this field</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>