objects/Contact/fields/Event_Invite__c.field-meta.xml
<CustomField>
    <fullName>Event_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Event Invite</label>
    <type>Checkbox</type>
</CustomField>