objects/Contact/fields/Fund_Performance_Flash_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Fund_Performance_Flash_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Fund Performance Flash - Monthly</label>
    <type>Checkbox</type>
</CustomField>