objects/Contact/fields/Global_Intelligence_Report_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Global_Intelligence_Report_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Custom field</description>
    <label>Global Intelligence Report - Quarterly</label>
    <type>Checkbox</type>
</CustomField>