objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : specify whether Contact is no longer valid and left the company.</description>
    <inlineHelpText>Is this contact still with the company?
E.g. &#39;checked&#39; mean left company

Note: Inactive contacts will not appear on lookup search results.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>