objects/Contact/fields/Investment_Note_Ad_Hoc__c.field-meta.xml
<CustomField>
    <fullName>Investment_Note_Ad_Hoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Note - Ad Hoc</label>
    <type>Checkbox</type>
</CustomField>