objects/Contact/fields/IsBranchHead__c.field-meta.xml
<CustomField>
    <fullName>IsBranchHead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBranchHead</label>
    <type>Checkbox</type>
</CustomField>