objects/Contact/fields/IsUnitHead__c.field-meta.xml
<CustomField>
    <fullName>IsUnitHead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnitHead</label>
    <type>Checkbox</type>
</CustomField>