objects/Contact/fields/pi__url__c.field-meta.xml
<CustomField>
    <fullName>pi__url__c</fullName>
    <description>This link takes you directly into the relevant prospect&#39;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
    <label>Pardot URL</label>
    <type>Url</type>
</CustomField>