objects/Contact/fields/pi__utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>pi__utm_campaign__c</fullName>
    <label>Google Analytics Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>