objects/Contact/fields/pi__utm_source__c.field-meta.xml
<CustomField>
    <fullName>pi__utm_source__c</fullName>
    <label>Google Analytics Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>