objects/Contact/fields/Product_Leaflet_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Product_Leaflet_Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Product Leaflet/Brochure</description>
    <label>Product Leaflet/Brochure</label>
    <type>Checkbox</type>
</CustomField>