objects/Contact/fields/Share_Holder_Notices__c.field-meta.xml
<CustomField>
    <fullName>Share_Holder_Notices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM : Share Holder Notices</description>
    <inlineHelpText>WAMCRM : Share Holder Notices</inlineHelpText>
    <label>Shareholder Notices</label>
    <type>Checkbox</type>
</CustomField>