objects/Contact/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <description>Added by ATO on 8/10/2017 to capture the agent supervisor code</description>
    <label>Supervisor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>