objects/Contact/recordTypes/Gereral_Contact.recordType-meta.xml
<RecordType>
    <fullName>Gereral_Contact</fullName>
    <active>true</active>
    <label>Gereral Contact</label>
</RecordType>