objects/Contact/recordTypes/MOVE.recordType-meta.xml
<RecordType>
    <fullName>MOVE</fullName>
    <active>true</active>
    <description>Record Type for ManulifeMOVE</description>
    <label>MOVE</label>
</RecordType>