objects/Contact/validationRules/WAM_FaxFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_FaxFormat</fullName>
    <active>true</active>
    <description>WAMCRM : enforce correct format</description>
    <errorConditionFormula>IF( 
AND(RecordType.Name = $Setup.WAM_CustomSetting__c.Contact_Distributor_Record_Type_Label__c, !ISBLANK(Fax)), 
	IF(OR(CONTAINS(Fax, "+"), CONTAINS(Fax, "("), CONTAINS(Fax, ")")),
	  IF( LEFT(TRIM(Fax), 1) == "+", 
	      IF(!CONTAINS(Fax, "(") || !CONTAINS(Fax, ")"), TRUE, FALSE),
		  IF(LEFT(TRIM(Fax), 1) &lt;&gt; "+", TRUE, FALSE)
	   ),
	FALSE),  		
FALSE)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter valid International Number</errorMessage>
</ValidationRule>