objects/Contact/validationRules/WAM_MobileFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_MobileFormat</fullName>
    <active>true</active>
    <description>WAMCRM : enforce correct format</description>
    <errorConditionFormula>IF( 
AND(RecordType.Name = $Setup.WAM_CustomSetting__c.Contact_Distributor_Record_Type_Label__c, !ISBLANK(  MobilePhone )), 
	IF(OR(CONTAINS(MobilePhone , "+"), CONTAINS(MobilePhone , "("), CONTAINS(MobilePhone , ")")),
	  IF( LEFT(TRIM(MobilePhone ), 1) == "+", 
	      IF(!CONTAINS(MobilePhone , "(") || !CONTAINS(MobilePhone , ")"), TRUE, FALSE),
		  IF(LEFT(TRIM(MobilePhone  ), 1) &lt;&gt; "+", TRUE, FALSE)
	   ),
	FALSE),  		
FALSE)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter valid International Number</errorMessage>
</ValidationRule>