objects/Contact/validationRules/WAM_OtherPhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_OtherPhoneFormat</fullName>
    <active>true</active>
    <description>WAMCRM : enforce correct format</description>
    <errorConditionFormula>IF( 
AND(RecordType.Name = $Setup.WAM_CustomSetting__c.Contact_Distributor_Record_Type_Label__c, !ISBLANK( OtherPhone )), 
	IF(OR(CONTAINS(OtherPhone , "+"), CONTAINS(OtherPhone , "("), CONTAINS(OtherPhone , ")")),
	  IF( LEFT(TRIM(OtherPhone ), 1) == "+", 
	      IF(!CONTAINS(OtherPhone , "(") || !CONTAINS(OtherPhone , ")"), TRUE, FALSE),
		  IF(LEFT(TRIM(OtherPhone ), 1) &lt;&gt; "+", TRUE, FALSE)
	   ),
	FALSE),  		
FALSE)</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>Please enter valid International Number</errorMessage>
</ValidationRule>