objects/Contact/validationRules/WAM_PhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_PhoneFormat</fullName>
    <active>true</active>
    <description>WAMCRM : enforce correct format</description>
    <errorConditionFormula>IF( 
AND(RecordType.Name =  $Setup.WAM_CustomSetting__c.Contact_Distributor_Record_Type_Label__c, !ISBLANK(Phone)), 
	IF(OR(CONTAINS(Phone, "+"), CONTAINS(Phone, "("), CONTAINS(Phone, ")")),
	  IF( LEFT(TRIM(Phone), 1) == "+", 
	      IF(!CONTAINS(Phone, "(") || !CONTAINS(Phone, ")"), TRUE, FALSE),
		  IF(LEFT(TRIM(Phone), 1) &lt;&gt; "+", TRUE, FALSE)
	   ),
	FALSE),  		
FALSE)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter valid International Number</errorMessage>
</ValidationRule>