objects/Contact/validationRules/WAM_validate_firstname.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_validate_firstname</fullName>
    <active>true</active>
    <description>WAM requires first name to be mandatory.</description>
    <errorConditionFormula>IF( RecordType.Name = $Setup.WAM_CustomSetting__c.Contact_Distributor_Record_Type_Label__c, 
 IF( ISBLANK( FirstName ) , TRUE, FALSE) 
, 

FALSE)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter first name.</errorMessage>
</ValidationRule>