objects/Contact/listViews/Partnership_Contact_Address_Change.listView-meta.xml
<ListView>
    <fullName>Partnership_Contact_Address_Change</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.WAM_Distributor</value>
    </filters>
    <label>Partnership Contact Address Change</label>
    <sharedTo>
        <role>System_Administrator</role>
        <roleAndSubordinatesInternal>WAM_Management</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>